# smolagent-researcher

./: .replit  README.md  TODO.md  TOOLS.md  agent.py  gdelt_v2.py  gdelt_v3.py  gradio_ui.py  main.py  modified_toolcalling_agent.yaml  pyproject.toml  replit.nix  tools.py
.clinerules/: 01-primary-rule.md  02-fastapi.md  03-langchain.md  04-stripe.md  05-stytch.md  06-content-seo-guidelines.md  07-unit-testing.md  08-smolagents.md  09-readme-guidelines.md
.codex/: AGENTS.md  config.yml
.github/workflows/: main.yml
tests/unit/: test_gdelt.py
