[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Ledger <ledger.west@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
fastapi = "^0.115.12"
uvicorn = "0.34.3"
arize-phoenix-otel = "^0.10.3"
openinference-instrumentation-smolagents = "^0.1.12"
smolagents = {extras = ["litellm"], version = "^1.17.0"}
python-dotenv = "^1.1.0"
openinference-instrumentation = "^0.1.32"
langchain-pinecone = "^0.2.8"
langchain-openai = "^0.3.21"
langchain-core = "^0.3.64"
pydantic = "^2.11.5"
langchain-community = "^0.3.24"
arxiv = "^2.2.0"
yfinance = "^0.2.61"
google-search-results = "^2.4.2"
langchain-fmp-data = "^0.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"